# CMF_Week_2

./: .gitignore  README.md  REVIEWER_GUIDE.md  TASK.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cmf_week2/: __init__.py  config.py
cmf_week2/cli/: export_lgbm_pnl.py  plot_lgbm_auc.py  run_all.py  run_baseline.py
cmf_week2/lib/: __init__.py  features.py  filter.py  full_history.py  load_data.py  markout.py  metrics.py  split.py
cmf_week2/strategies_bundle/config/: btcusdt.json  ethusdt.json
cmf_week2/strategies_bundle/lib/: __init__.py  adaptive_kalman.py  config.py  dataset.py  evaluate.py  feature_builder.py  hawkes_liq.py  io_config.py  models.py  normalization.py  paths.py  pipeline.py  signals.py  targets.py
data/: README.md
docs/: BASELINE.md  FEATURES.md  FORECAST_HORIZONS.md  LGBM_PARAMS.md  METHODOLOGY.md
lib/: __init__.py  features.py  filter.py  load_data.py  markout.py  metrics.py
notebooks/: Weekly_Baseline_Report.ipynb
results/: README.md  REPORT.md  baseline_metrics.csv  baseline_metrics_full.csv  baseline_metrics_full_README.txt  direction_horizons_reference.json  lgbm_direction_metrics.json
scripts/: download_data.py  plot_lgbm_auc.py  run_baseline.py
tests/: test_smoke.py
