[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmf-week2"
version = "0.2.0"
description = "CMF Week 2 — liquidation trade filter baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20",
  "pyarrow>=14",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "lightgbm>=4.0",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
cmf-run-baseline = "cmf_week2.cli.run_baseline:main"
cmf-run-all = "cmf_week2.cli.run_all:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cmf_week2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
